Closed Bug 1822224 Opened 2 years ago Closed 2 years ago

can't reorder newsgroups by drag and drop anymore

Categories

(Thunderbird :: Mail Window Front End, defect)

Thunderbird 113
defect

Tracking

(thunderbird_esr102 unaffected)

RESOLVED FIXED
115 Branch
Tracking Status
thunderbird_esr102 --- unaffected

People

(Reporter: mkmelin, Assigned: mkmelin)

References

(Blocks 1 open bug)

Details

(Keywords: regression, Whiteboard: [Supernova3p])

Attachments

(1 file)

See Also: → 1822226
No longer depends on: sn-folderpane
Whiteboard: [Supernova] → [Supernova3p]

Is it still the case If so I wanted to know if it was possible to be assigned this issue. It's my first contribution so if someone could help me with it, it would be appriciated.

Sure, once you have a patch, submit it to this bug.
Details of what's needed are in comment 0. See https://developer.thunderbird.net/thunderbird-development/getting-started

Magnus, can you explore this and take care of it if it's a trivial solution?
I'm happy to help a new contributor but if there's no activity here we should fix it.

Flags: needinfo?(mkmelin+mozilla)
Assignee: nobody → mkmelin+mozilla
Mentor: mkmelin+mozilla
Status: NEW → ASSIGNED
Flags: needinfo?(mkmelin+mozilla)
Keywords: good-first-bug

Pushed by mkmelin@iki.fi:
https://hg.mozilla.org/comm-central/rev/1b3548540991
fix reorderering newsgroups by drag and drop. r=BenC

Status: ASSIGNED → RESOLVED
Closed: 2 years ago
Resolution: --- → FIXED
Target Milestone: --- → 115 Branch
Regressions: 1835619
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: