Bug 1822224 - fix reorderering newsgroups by drag and drop. r=BenC

Differential Revision: https://phabricator.services.mozilla.com/D178613

--HG--
extra : rebase_source : 2f9979ec6cf745647385dd617577abc4474d890a
extra : amend_source : 9e9828afc2e853286e8934fa9f2bb3f1c84e0489
extra : absorb_source : 96231c324610eef78ae4b576e8426498e33c7b4d